--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.0.0",
+    "@nuxtjs/axios": "^5.0.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
     "nuxt": "^1.0.0",
