--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.1",
+    "@nuxtjs/dotenv": "^1.1.0",
     "body-parser": "^1.18.2",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
